[refactor] Update permissions & Add populate to payment method
